<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.franspaco.tareacomponentes.ActivityContact" android:orientation="vertical">

<TextView
        android:text="@string/contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/textView13" android:layout_weight="1"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/editText" android:layout_weight="1"/>
<Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_weight="1"/>
<TextView
        android:text="@string/phone_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:id="@+id/textView14" android:layout_weight="1"/>
<Button
        android:onClick="onClick_phone"
        android:text="@string/phoneNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:id="@+id/button2" android:layout_weight="1"/>
</LinearLayout>
