<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.franspaco.tareacomponentes.MainActivity" android:orientation="vertical">

    <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView" android:layout_weight="1"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/nameEdit" android:layout_weight="1"/>
    <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_weight="1"/>
    <TextView
            android:text="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView2" android:layout_weight="1"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailEdit" android:layout_weight="1"/>
    <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_weight="1"/>
    <TextView
            android:text="@string/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView3" android:layout_weight="1"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/phoneEdit" android:layout_weight="1"/>
    <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_weight="1"/>
    <TextView
            android:text="@string/p1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView4" android:layout_weight="1"/>
    <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/rgp1">
        <RadioButton
                android:text="Si"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/radioButton" android:layout_weight="1"/>
        <RadioButton
                android:text="Ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/radioButton2" android:layout_weight="1"/>
        <RadioButton
                android:text="No sé"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/radioButton3" android:layout_weight="1"/>
        <RadioButton
                android:text="No"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/radioButton4" android:layout_weight="1"/>
    </RadioGroup>
    <TextView
            android:text="@string/p2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView5" android:layout_weight="1"/>
    <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:id="@+id/rgp2">
        <RadioButton
                android:text="Muy profesional"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/radioButton5" android:layout_weight="1"
                android:textSize="12sp"/>
        <RadioButton
                android:text="Profesional"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/radioButton6" android:layout_weight="1"
                android:textSize="12sp"/>
        <RadioButton
                android:text="Poco profesional"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/radioButton7" android:layout_weight="1"
                android:textSize="12sp"/>
        <RadioButton
                android:text="Nada profesional"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/radioButton8" android:layout_weight="1"
                android:textSize="12sp"/>
    </RadioGroup>
    <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_weight="1"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Space
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_width="match_parent"/>
        <Button
                android:text="Siguiente"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/button" android:layout_weight="1"
                android:onClick="onClick_Next"/>
    </LinearLayout>
</LinearLayout>
